--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/anun05/social-network-api.git"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +16,11 @@
   "bugs": {
     "url": "https://github.com/anun05/social-network-api"
   },
- 
+  "homepage": "https://github.com/anun05/social-network-api#readme",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "moment": "^2.29.1",
-    "mongoose": "^6.1.1",
+    "mongoose": "^6.2.0",
     "nodemon": "^2.0.15"
   }
 }
